@@ -113,6 +113,7 @@ fixed formatting. Tomasz Flendrich
 * Update the NEWS file.  Harlan Stenn.
 * Autoconf cleanup.  Harlan Stenn.
 * Unit test dist cleanup. Harlan Stenn.
+* Cleanup various test Makefile.am files.  Harlan Stenn.
 ---
 (4.2.8p3) 2015/06/29 Released by Harlan Stenn <stenn@ntp.org>
 
